<resources>
    <string name="app_name">TabqyPOS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="txtPos">POS</string>
    <string name="txtLogin">Login</string>
    <string name="txtOk">Ok</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">TABQY</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ali</string>
    <string name="nav_header_subtitle">POS1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main_dash_board">MainDashBoardActivity</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="save">Save</string>
    <string name="charge_btn">SAR 8.00</string>

    <!--OnlineFragment-->
    <string name="information">Information</string>
    <string name="order_number">Order Number</string>
    <string name="order_taken_at">Order Taken At</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="amount">Amount</string>
    <string name="deliver_to">Deliver to</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_in_progress">Deliver - InProgress</string>
    <string name="waiting_for_pick">Waiting for Pick</string>
    <string name="new_orders">New Orders</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>


    <!--fragment charge -->
    <string name="fragment_charge_txtsubtotal">Sub Total : </string>
    <string name="fragment_charge_txttax">Tax : </string>
    <string name="fragment_charge_txttotal">Total : </string>
    <string name="fragment_charge_txtOrderNo">Order No </string>
    <string name="fragment_charge_txtApplyCoupon">Apply coupon</string>
    <string name="fragment_charge_txtApplypoint">Apply point</string>
    <string name="fragment_charge_txtApply">Apply</string>
    <string name="fragment_charge_txtTotalAmt">Total Amount</string>
    <string name="fragment_charge_RadioCAsh">Pay by Cash </string>
    <string name="fragment_charge_RadioCard">Pay by Card </string>
    <string name="fragment_charge_btnCancel">Cancel </string>
    <string name="fragment_charge_txt_take_way">Take way </string>

    <!--activity search-->
    <string name="activity_search_edt_search">Enter Customer Mobile or Telephone Number </string>
    <string name="activity_search_txt_search">Search!</string>


    <!--fragment save-->
    <string name="fragment_save_txt_delivery">Delivery Address</string>
    <string name="fragment_save_txt_delete">Delete</string>
    <string name="fragment_save_txt_add_address">Add Address</string>
    <string name="fragment_save_txt_place_order">Place New Order</string>

    <!--dialog delete item -->
    <string name="dialog_del_clear_title">Clear Items </string>
    <string name="dialog_del_clear_content">Are you sure you want to clear the items? </string>
    <string name="dialog_del_cancel">Cancel </string>
    <string name="dialog_del_clear">Clear </string>

    <!--dialog add note item -->
    <string name="dialog_add_note_title">Add Note </string>
    <string name="dialog_add_note_add">Add </string>

    <!--dialog add note item -->
    <string name="dialog_add_dis_title">Add Discount </string>

    <!--dialog delete address-->
    <string name="dialog_add_address_content">Are you sure you want to delete the address? </string>
    <string name="dialog_add_address_delete">Delete Address</string>

    <!--fragment pin -->
    <string name="fragment_pin_1">1</string>
    <string name="fragment_pin_clear">Clear</string>
    <string name="fragment_pin_0">0</string>
    <string name="fragment_pin_9">9</string>
    <string name="fragment_pin_8">8</string>
    <string name="fragment_pin_7">7</string>
    <string name="fragment_pin_6">6</string>
    <string name="fragment_pin_5">5</string>
    <string name="fragment_pin_4">4</string>
    <string name="fragment_pin_3">3</string>
    <string name="fragment_pin_2">2</string>
    <string name="fragment_pin_enter_the_pin_of_manager_or_administrator">Enter the PIN of manager or administrator</string>

    <!-- status bar -->
    <string name="status_bar_customer">Customer</string>
    <string name="status_bar_scan">Scan</string>
    <string name="status_bar_search">Search</string>
    <string name="status_bar_add">Add</string>
    <string name="status_bar_add_discount">Add Discount</string>
    <string name="status_bar_add_note">Add Note</string>

    <!--fragment crm -->
    <string name="fragment_crm_items_name">Items name</string>
    <string name="fragment_crm_qty">Qty</string>
    <string name="fragment_crm_price">Price</string>
    <string name="fragment_crm_subtotal">SubTotal</string>
    <string name="fragment_table_table_order">Table Order</string>
    <string name="dialog_pay_by_cash">Pay By Cash</string>

</resources>
