<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.SaveFragment">

    <include
        android:id="@+id/top_statusbar"
        layout="@layout/include_topsttausbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginLeft="@dimen/nav1_width">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="3dp">

                    <LinearLayout
                        android:padding="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:id="@+id/fragment_save_img_cusotm"
                                android:src="@drawable/profile_new"/>
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_toRightOf="@+id/fragment_save_img_cusotm"
                                android:layout_centerVertical="true">
                                <com.askonlinesolutions.user.tabqy.customtext.CustomTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="John"
                                    android:textSize="@dimen/small_size"
                                    android:textColor="@color/colorBlack"
                                    android:paddingLeft="3dp"
                                    android:id="@+id/fragment_save_name"/>
                                <com.askonlinesolutions.user.tabqy.customtext.CustomTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="3dp"
                                    android:layout_below="@+id/fragment_save_name"
                                    android:text="Not John? Create new Customer"
                                    android:layout_toRightOf="@+id/fragment_save_img_cusotm"
                                    android:id="@+id/fragment_save_not_name"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingRight="5dp"
                                android:layout_alignParentRight="true">
                                <com.askonlinesolutions.user.tabqy.customtext.CustomTextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Phone Number : "
                                    android:gravity="right"
                                    android:textSize="@dimen/extra_small_size"
                                    android:textColor="@color/colorlightBlack"
                                    android:paddingLeft="3dp" />
                                <com.askonlinesolutions.user.tabqy.customtext.CustomTextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="3dp"
                                    android:gravity="right"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="@dimen/small_size"
                                    android:layout_below="@+id/fragment_save_name"
                                    android:text="064-5664-4566"
                                    android:layout_toRightOf="@+id/fragment_save_img_cusotm"
                                    android:id="@+id/fragment_save_phone"/>
                            </LinearLayout>
                        </RelativeLayout>

                        <View
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorLightGrey"/>

                        <com.askonlinesolutions.user.tabqy.customtext.CustomTextView
                            android:layout_width="match_parent"
                            android:padding="8dp"
                            android:textColor="@color/colorBlack"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_save_txt_delivery"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="8dp"
                            android:background="@drawable/bg_light_grey">
                           <LinearLayout
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:orientation="horizontal"
                               android:layout_margin="10dp"
                               android:padding="10dp"
                               android:layout_gravity="right">
                               <android.support.v7.widget.CardView
                                   android:layout_margin="5dp"
                                   app:cardCornerRadius="3dp"
                                   android:layout_gravity="right"
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content">
                                   <ImageView
                                       android:padding="3dp"
                                       android:layout_width="wrap_content"
                                       android:layout_height="wrap_content"
                                       android:src="@drawable/ic_loc"/>
                               </android.support.v7.widget.CardView>
                               <android.support.v7.widget.CardView
                                   android:layout_margin="5dp"
                                   app:cardCornerRadius="3dp"
                                   android:layout_gravity="right"
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content">
                                   <ImageView
                                       android:padding="3dp"
                                       android:layout_width="wrap_content"
                                       android:layout_height="wrap_content"
                                       android:src="@drawable/ic_edit_pink"/>
                               </android.support.v7.widget.CardView>
                           </LinearLayout>

                            <com.askonlinesolutions.user.tabqy.customtext.CustomTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorBlack"
                                android:paddingLeft="15dp"
                                android:paddingBottom="15dp"
                                android:text="E-38 , Noida Sector 63,\n UP, India "/>
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp">
                            <com.askonlinesolutions.user.tabqy.customtext.CustomTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorappPink"
                                android:drawablePadding="5dp"
                                android:gravity="center_vertical"
                                android:text="@string/fragment_save_txt_delete"
                                android:drawableLeft="@drawable/ic_delete_button"
                                android:drawableStart="@drawable/ic_delete_button" />

                            <com.askonlinesolutions.user.tabqy.customtext.CustomTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorWhite"
                                android:padding="5dp"
                                android:background="@drawable/btn_background_black"
                                android:drawablePadding="5dp"
                                android:textSize="@dimen/extra_small_size"
                                android:layout_alignParentRight="true"
                                android:gravity="center_vertical"
                                android:text="@string/fragment_save_txt_add_address"
                                android:drawableLeft="@drawable/ic_add"/>


                        </RelativeLayout>


                        <com.askonlinesolutions.user.tabqy.customtext.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:layout_margin="10dp"
                            android:drawablePadding="5dp"
                            android:textColor="@color/colorWhite"
                            android:layout_gravity="center"
                            android:drawableLeft="@drawable/ic_add"
                            android:background="@drawable/btn_backgroundpink"
                            android:text="@string/fragment_save_txt_place_order"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">


                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>